--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag "application", defer: true %>
   </head>
 
   <body>
@@ -27,11 +27,20 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarUser" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Not connected
+                  <% if user_signed_in? %>
+                    Connected as <%= current_user %>
+                  <% else %>
+                    Not connected
+                  <% end %>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarUser">
-                  <li><a class="dropdown-item" href="#">Sign in</a></li>
-                  <li><a class="dropdown-item" href="#">Sign up</a></li>
+                  <% if user_signed_in? %>
+                    <li><%= link_to "My account", edit_user_registration_path, class: "dropdown-item" %></li>
+                    <li><%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
+                  <% else %>
+                    <li><%= link_to "Sign in", new_user_session_path, class: "dropdown-item" %></li>
+                    <li><%= link_to "Sign up", new_user_registration_path, class: "dropdown-item" %></li>
+                  <% end %>
                 </ul>
               </li>
             </ul>
