--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
               <li class="nav-item">
                 <%= link_to "Home", root_path, class: "nav-link" %>
               </li>
+              <% if user_signed_in? && current_user.admin? %>
+                <li class="nav-item">
+                  <%= link_to "OAuth Apps", oauth_applications_path, class: "nav-link" %>
+                </li>
+              <% end %>
             </ul>
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
@@ -35,6 +40,8 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarUser">
                   <% if user_signed_in? %>
+                    <li><%= link_to "Role: #{current_user.role.humanize}", "#", class: "dropdown-item disabled" %></li>
+                    <li><hr class="dropdown-divider"></li>
                     <li><%= link_to "My account", edit_user_registration_path, class: "dropdown-item" %></li>
                     <li><%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
                   <% else %>
